Added user html helper, and bugs fixed.

--- a/Source/CRMLite.UI/Areas/CRM/Views/Account/Create.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/Account/Create.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model  PropznetCommon.Features.CRM.ViewModel.User.UserProfileViewModel
+@{
     ViewBag.Title = "Create";
 }
 <div class="col-md-12">
@@ -79,7 +80,7 @@
         $(document).ready(function () {
             var vm = new AccountViewModel();
             ko.applyBindings(vm);
-            vm.init();
+            vm.init(@Model.Id);
         });
     </script>
 
