--- a/Source/CRMLite.UI/Areas/CRM/Views/Contact/DataTableIndex.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/Contact/DataTableIndex.cshtml
@@ -196,6 +196,7 @@
 </div>
 @section scripts{
 <script src="~/App/ViewModels/CRM/models.js"></script>
+<script src="~/App/ViewModels/Contact/ContactModel.js"></script>
 <script src="~/App/ViewModels/Contact/ContactViewModel.js"></script>
     <script type="text/javascript">
         $(document).ready(function () {
