--- a/Source/CRMLite.UI/Areas/CRM/Views/Contact/Index.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/Contact/Index.cshtml
@@ -74,6 +74,7 @@
 @section scripts{
     <script src="~/Content/js/select2.min.js"></script>
     <script src="~/App/ViewModels/CRM/models.js"></script>
+<script src="~/App/ViewModels/Contact/ContactModel.js"></script>
     <script src="~/App/ViewModels/Contact/ContactViewModel.js"></script>
     <script type="text/javascript">
         $(document).ready(function () {
