--- a/Source/CRMLite.UI/Areas/CRM/Views/Lead/ConvertLead.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/Lead/ConvertLead.cshtml
@@ -72,7 +72,7 @@
                         </span>
                     </div>
 
-                    @*<input type="text" placeholder="Click here to Add Date" id="" class="form-control datePtoP">*@
+                    @*<input type="text" placeholder="Click here to add date" id="" class="form-control datePtoP">*@
                     @*<input type="text" id="ExpectedDate" class="form-control" data-bind="datepicker:ExpectedDate,value:ExpectedDate" />*@
                 </div>
                 <div class="form-group">
