--- a/Source/CRMLite.UI/Areas/CRM/Views/Potential/Index.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/Potential/Index.cshtml
@@ -79,6 +79,7 @@
 <script src="~/Content/js/select2.min.js"></script>
 <script src="~/App/ViewModels/Account/AccountModel.js"></script>
 <script src="~/App/ViewModels/CRM/models.js"></script>
+<script src="~/App/ViewModels/Potential/PotentialModel.js"></script>
 <script src="~/App/ViewModels/Potential/PotentialViewModel.js"></script>
     <script type="text/javascript">
         $(document).ready(function() {
