--- a/Source/CRMLite.UI/Areas/CRM/Views/Lead/Create.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/Lead/Create.cshtml
@@ -1,4 +1,5 @@
-﻿<div class="col-md-12 m-top20">
+﻿@model  PropznetCommon.Features.CRM.ViewModel.User.UserProfileViewModel
+<div class="col-md-12 m-top20">
     <h3 class="inline-b">Create Lead</h3>
 </div>
 <div>
@@ -98,15 +99,17 @@
 </div>
 
 @section scripts{
-    <script src="~/Content/js/emailinjector.js"></script>
-    <script src="~/App/ViewModels/CRM/models.js"></script>
-    <script src="~/App/ViewModels/Lead/LeadViewModel.js"></script>
-    <script src="~/Content/js/mailus.js"></script>
-    <script type="text/javascript">
-        $(document).ready(function () {
-            var vm = new LeadViewModel();
-            ko.applyBindings(vm);
-            vm.init();
-        });
-    </script>
+<script src="~/Content/js/emailinjector.js"></script>
+<script src="~/App/ViewModels/Lead/LeadModel.js"></script>
+<script src="~/App/ViewModels/Lead/ConvertLead.js"></script>
+<script src="~/App/ViewModels/CRM/models.js"></script>
+<script src="~/App/ViewModels/Lead/LeadViewModel.js"></script>
+<script src="~/Content/js/mailus.js"></script>
+<script type="text/javascript">
+    $(document).ready(function () {
+        var vm = new LeadViewModel();
+        ko.applyBindings(vm);
+        vm.init(@Model.Id);
+    });
+</script>
 }
