--- a/Source/CRMLite.UI/Areas/CRM/Views/Lead/Index.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/Lead/Index.cshtml
@@ -248,7 +248,7 @@
 
 
 
-                                <input type="text" placeholder="Click here to Add Date" id="datePickerPoint" class="form-control datePtoP">
+                                <input type="text" placeholder="Click here to add date" id="datePickerPoint" class="form-control datePtoP">
                                 @*<input type="text" id="ExpectedDate" class="form-control" data-bind="datepicker:ExpectedDate,value:ExpectedDate" />*@
                             </div>
                             <div class="form-group">
@@ -297,15 +297,17 @@
 </div>
 
 @section scripts{
-    <script src="~/Content/js/emailinjector.js"></script>
-    <script src="~/App/ViewModels/CRM/models.js"></script>
-    <script src="~/App/ViewModels/Lead/LeadViewModel.js"></script>
-    <script src="~/Content/js/mailus.js"></script>
-    <script type="text/javascript">
-        $(document).ready(function() {
-            var vm = new LeadViewModel();
-            ko.applyBindings(vm);
-            vm.LeadListing();
-        });
-    </script>
+<script src="~/Content/js/emailinjector.js"></script>
+<script src="~/App/ViewModels/Lead/LeadModel.js"></script>
+<script src="~/App/ViewModels/CRM/models.js"></script>
+<script src="~/App/ViewModels/Lead/ConvertLead.js"></script>
+<script src="~/App/ViewModels/Lead/LeadViewModel.js"></script>
+<script src="~/Content/js/mailus.js"></script>
+<script type="text/javascript">
+    $(document).ready(function() {
+        var vm = new LeadViewModel();
+        ko.applyBindings(vm);
+        vm.LeadListing();
+    });
+</script>
 }
