--- a/Source/CRMLite.UI/Areas/CRM/Views/Potential/Edit.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/Potential/Edit.cshtml
@@ -35,7 +35,7 @@
                                     </div>
                                     <div class="form-group">
                                         <label>Contact</label>
-                                        <select data-bind="options: $root.Contacts ,optionsText: 'FirstName', optionsValue: 'Id', value:SelectedContact, optionsCaption:'Select Contact'" class="form-control"></select>
+                                        <select data-bind="options: $root.Contacts ,optionsText: 'Name', optionsValue: 'Id', value:SelectedContact, optionsCaption:'Select Contact'" class="form-control"></select>
                                     </div>
                                     <div class="form-group">
                                         <label>Lead Source</label>
@@ -67,7 +67,7 @@
                                     <div class="form-group">
                                         <label>Expected Close Date</label>
                                         <div class="input-group">
-                                            <input type="text" placeholder="Click here to Add Time" id="ExpectedDate" data-bind="value:ExpectedCloseDate" class="form-control timepicker">
+                                            <input type="text" placeholder="Click here to add date" id="ExpectedDate" data-bind="value:ExpectedCloseDate" class="form-control timepicker">
                                             <span class="input-group-addon"><i class="fa fa-calendar-o fa-fw"></i></span>
                                         </div>
                                         @*<input type="text" class="form-control" data-bind="datepicker:ExpectedCloseDate,datepickerOptions: { 'dateFormat': 'dd/mm/yy' },value:ExpectedCloseDate" />*@
@@ -184,6 +184,7 @@
     <script src="~/Content/js/select2.min.js"></script>
     <script src="~/App/ViewModels/Account/AccountModel.js"></script>
     <script src="~/App/ViewModels/CRM/models.js"></script>
+    <script src="~/App/ViewModels/Potential/PotentialModel.js"></script>
     <script src="~/App/ViewModels/Amenity/AmenityModel.js"></script>
     <script src="~/App/ViewModels/Property/PropertyModel.js"></script>
     <script src="~/App/ViewModels/Property/PropertyModel.js"></script>
