--- a/Source/CRMLite.UI/Views/Shared/_Layout.cshtml
+++ b/Source/CRMLite.UI/Views/Shared/_Layout.cshtml
@@ -57,7 +57,7 @@
                   </section> </section> </li> 
         
             <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown"> <span class="thumb-sm avatar pull-left"> <img src="~/Content/images/logo.png" alt="..."> </span>Hello  @User.Identity.Name<b class="caret"></b> </a>
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown"> <span class="thumb-sm avatar pull-left"> <img src="/Upload/Avatar/@ViewBag.Image" alt="avatar"> </span>@UserHTMLHelper.RenderUserName()<b class="caret"></b> </a>
                 <ul class="dropdown-menu animated fadeInRight">
                     <li> <span class="arrow top"></span> <a href="@Url.Action("Index", "Settings", new {area = "CRM"})">Settings</a> </li>
                     <li> <a href="@Url.Action("UpdateProfile", "User", new {area = ""})">Profile</a> </li>
