--- a/Source/CRMLite.UI/Areas/CRM/Views/Lead/ConvertLead.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/Lead/ConvertLead.cshtml
@@ -10,7 +10,7 @@
         <div data-bind="template:{name:'convert-Lead-template',data:selectedConvertLead}">
         </div>
         <div class="col-lg-12">
-            <button class="btn btn-primary ladda-button" data-style="expand-left" data-bind="ladda:$root.busy,click:$root.convertingLead"><span class=" ladda-label"><span class=" ladda-label"><i class="fa fa-save"></i> Convert</span></button>
+            <button class="btn btn-primary ladda-button" data-style="expand-left" data-bind="ladda:$root.busy,click:$root.convertingLead"><span class=" ladda-label"><span class=" ladda-label"><i class="fa fa-crop"></i> Convert</span></button>
 
         </div>
     </div>
