--- a/Source/CRMLite.UI/Areas/CRM/Views/Account/Index.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/Account/Index.cshtml
@@ -1,32 +1,32 @@
 ﻿@using CRMLite.Infrastructure
 @using CRMLite.Infrastructure.Enum
-<div class="hbox stretch">
-    <div class="m-top20">
-        <div class="col-md-6 row">
-            <div class="col-md-12">
-                <h3 class="inline-b">Manage Accounts</h3>
-            </div>
+<div class="col-md-12">
+
+    <div class="col-md-6 row">
+        <div class="m-top20">
+            <h3 class="inline-b">Manage Accounts</h3>
         </div>
-       
+    </div>
+
            
                 @if (PermissionChecker.CheckPermission(ViewBag.UserPermissions, PermissionCodes.ManageAccount))
 {
-    <button type="button" class="btn btn-primary pull-right m-r m-t-lg " data-bind="click:gotoAccountPage"><i class="fa fa-plus"> </i> Create</button>
+    <button type="button" class="btn btn-primary pull-right  m-t-lg m-b-sm  f-width" data-bind="click:gotoAccountPage"><i class="fa fa-plus"> </i> Create</button>
 }
           
        
-        </div>
+       
     <div class="clearfix"></div>
-    <div class="col-md-12">
+    
         <div class="bdr marB-md pad-sm">
-            <div class="col-md-3 m-b-md">
-                <div class="row">
+            <div class="width-25 f-width">
+               
                     <select data-bind="options: $root.Users ,optionsText: 'Name', optionsValue: 'Id', value:SearchAssignedTo, optionsCaption:'Assigned To'" class="form-control"></select>
-                </div>
+              
             </div>
-            <div class="col-md-3">
+            
                 <button type="button" class="btn btn-primary f-width" data-bind="click:search"><i class="fa fa-search"></i> Search</button>
-            </div>
+          
         </div>
         <div class="clearfix"></div>
         <div class="scroll-horrizontal">
@@ -70,7 +70,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        
 </div>
 
 <div class="modal fade" id="Details" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
