--- a/Source/CRMLite.UI/Areas/CRM/Views/Lead/Edit.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/Lead/Edit.cshtml
@@ -1,18 +1,19 @@
 ﻿<div class="" data-bind="loading:$root.isBusy">
-    <div class="col-md-6 row">
-        <div class="col-md-12 m-top20">
-            <h3 class="inline-b">Update Lead Details</h3>
-        </div>
+
+    <div class="col-md-12 m-top20">
+        <h3 class="inline-b">Update Lead Details</h3>
     </div>
+
+   
     <div class="clearfix"></div>
     <input type="hidden" id="hdnLeadId" value="@ViewBag.LeadId" />
-    <div class="col-lg-12 pad0 padB0" data-bind="with:selectedLead">
-        <div class="row">
+    <div class="pad0 padB0" data-bind="with:selectedLead">
+        
             <div class="col-md-12">
                 <h4 class="text-primary">Lead Information</h4>
             </div>
-            <div class="col-lg-12 bdr">
-                <div class="row">
+            
+                
                     <div class="col-md-6">
                         <div class="form-group ">
                             <label>First Name</label>
@@ -58,13 +59,12 @@
                             <select data-bind="options: $root.Assignto ,optionsText: 'Name',optionsValue: 'Id', value:SelectedAssignedTo" class="form-control"></select>
                         </div>
                     </div>
-                </div>
-            </div>
+                
+         
             <div class="col-md-12">
                 <h4 class="text-primary">Contact Details</h4>
             </div>
-            <div class="col-lg-12 bdr">
-                <div class="row">
+           
                     <div class="col-lg-6">
                         <div class="form-group">
                             <label>Email</label>
@@ -81,19 +81,22 @@
                             <input type="text" data-bind="value:Phone,numericOnly:true" class=" form-control" />
                         </div>
 
-                        <div class="form-group">
-                            <label>Description</label>
-                            <textarea data-bind="value:Comment" class=" form-control"
-                                      rows="2"></textarea>
-                        </div>
+                        
 
                     </div>
-       
-                </div>
 
+        <div class="col-md-12">
+
+            <div class="form-group">
+                <label>Description</label>
+                <textarea data-bind="value:Comment" class=" form-control"
+                          rows="3"></textarea>
             </div>
-
         </div>
+       
+               
+
+       
     </div>
     <div class="col-lg-12">
         <button class="btn btn-primary ladda-button" data-style="expand-left" data-bind="ladda:$root.busy,click:$root.updateLead"><span class=" ladda-label"><i class="fa fa-file-text"></i> Update</span></button>
