Potentail search issues solved.

--- a/Source/CRMLite.UI/Areas/CRM/Views/Contact/Create.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/Contact/Create.cshtml
@@ -5,7 +5,7 @@
     <h3 class="inline-b">
         Create
     </h3>
-    <div data-bind="loading:$root.isBusy">
+    <div >
         <div>
             <div data-bind="with:SelectedContact">
                 <div class="row">
