--- a/Source/CRMLite.UI/Areas/CRM/Views/LeadSource/Index.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/LeadSource/Index.cshtml
@@ -37,7 +37,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title" id="myModalLabel">Add Driver</h4>
+                <h4 class="modal-title" id="myModalLabel">Add Lead Source</h4>
             </div>
             <div class="modal-body" data-bind="template:{name:'item-lead-template',data:selectedLeadSource}">
 
@@ -58,7 +58,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title" id="myModalLabel">Add Driver</h4>
+                <h4 class="modal-title" id="myModalLabel">Edit Lead Source</h4>
             </div>
             <div class="modal-body" data-bind="template:{name:'item-lead-template',data:selectedLeadSource}">
 
