--- a/Source/CRMLite.UI/Areas/CRM/Views/Account/Edit.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/Account/Edit.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@model  PropznetCommon.Features.CRM.ViewModel.Account.AccountViewModel
+@using CRMLite.UI.Helpers;
 @{
     ViewBag.Title = "Edit";
 }
@@ -17,12 +18,12 @@
                     <div class="col-md-6">
 
                         <div class="form-group ">
-                            <label>Account Name</label>
+                            @Html.RequiredLabelFor(model => model.Name, new { @class = "control-label" })
                             <input type="text" data-bind="value:AccountName" class="form-control" />
                         </div>
 
                         <div class="form-group">
-                            <label>Industry</label>
+                            @Html.RequiredLabelFor(model => model.Industry, new { @class = "control-label" })
                             <input type="text" data-bind="value:Industry" class="form-control" />
                         </div>
 
@@ -33,11 +34,11 @@
                     </div>
                     <div class="col-md-6 ">
                         <div class="form-group">
-                            <label>Email</label>
+                            @Html.RequiredLabelFor(model => model.Email, new { @class = "control-label" })
                             <input type="text" data-bind="value:Email" class="form-control" />
                         </div>
                         <div class="form-group">
-                            <label>Phone</label>
+                            @Html.RequiredLabelFor(model => model.Phone, new { @class = "control-label" })
                             <input type="text" data-bind="value:Phone,numericOnly:true" class=" form-control" />
                         </div>
                         <div class="form-group">
@@ -48,7 +49,7 @@
                     </div>
                 </div>
                 <div class="col-md-12">
-                    <h4 class="text-primary">Address Information</h4>
+                    <h4 class="text-primary">Address Information <span class="required">*</span></h4>
                 </div>
                 <div class="bdr">
                     <div class="col-lg-12">
@@ -69,6 +70,9 @@
                 </div>
             </div>
             <div class="col-lg-12">
+                <div class="pull-right">
+                    <span class="required">*</span><i>Indicates required field</i>
+                </div>
                 <button class="btn btn-primary ladda-button" data-style="expand-left" data-bind="ladda:$root.busy,click:$root.updateAccount"><span class=" ladda-label"><i class="fa fa-file-text"></i> Update</span></button>
             </div>
 
