--- a/Source/CRMLite.UI/Areas/CRM/Views/Contact/Create.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/Contact/Create.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@model  PropznetCommon.Features.CRM.ViewModel.Contact.ContactViewModel
+@using CRMLite.UI.Helpers;
+@{
     ViewBag.Title = "Create";
 }
 <div class="col-md-12">
@@ -33,7 +35,7 @@
                     <div class="row">
                         <div class="col-md-6">
                             <div class="form-group ">
-                                <label>First Name</label>
+                                @Html.RequiredLabelFor(model => model.FirstName, new { @class = "control-label" })
                                 <input type="text" data-bind="value:FirstName" class="form-control" />
                             </div>
                             <div class="form-group">
@@ -41,7 +43,7 @@
                                 <input type="text" data-bind="value:LastName" class="form-control" />
                             </div>
                             <div class="form-group">
-                                <label>Title</label>
+                                @Html.RequiredLabelFor(model => model.Title, new { @class = "control-label" })
                                 <input type="text" data-bind="value:Title" class="form-control" />
                             </div>
                             <div class="form-group">
@@ -64,7 +66,7 @@
                         </div>
                         <div class="col-md-6 ">
                             <div class="form-group">
-                                <label>Email</label>
+                                @Html.RequiredLabelFor(model => model.Email, new { @class = "control-label" })
                                 <input type="text" data-bind="value:Email" class="form-control" />
                             </div>
                             <div class=" form-group">
@@ -72,7 +74,7 @@
                                 <input type="text" data-bind="value:SecondaryEmail" class="form-control" />
                             </div>
                             <div class="form-group">
-                                <label>Phone</label>
+                                @Html.RequiredLabelFor(model => model.Phone, new { @class = "control-label" })
                                 <input type="text" data-bind="value:Phone,numericOnly:true" class=" form-control" />
                             </div>
                             <div class=" form-group">
@@ -112,6 +114,9 @@
             </div>
             <div class="col-md-12">
                 <div class="row">
+                    <div class="pull-right">
+                        <span class="required">*</span><i>Indicates required field</i>
+                    </div>
                     <button class="btn btn-primary ladda-button" data-style="expand-left" data-bind="ladda:$root.busy,click:$root.saveContact"><span class=" ladda-label"><i class="fa fa-save"></i> Save</span></button>
                 </div>
             </div>
