--- a/Source/CRMLite.UI/Areas/CRM/Views/Contact/Edit.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/Contact/Edit.cshtml
@@ -1,3 +1,5 @@
+@model  PropznetCommon.Features.CRM.ViewModel.Contact.ContactViewModel
+@using CRMLite.UI.Helpers;
 @{
     ViewBag.Title = "Create";
 }
@@ -34,7 +36,7 @@
                     <div class="row">
                         <div class="col-md-6">
                             <div class="form-group ">
-                                <label>First Name</label>
+                                @Html.RequiredLabelFor(model => model.FirstName, new { @class = "control-label" })
                                 <input type="text" data-bind="value:FirstName" class="form-control" />
                             </div>
                             <div class="form-group">
@@ -42,7 +44,7 @@
                                 <input type="text" data-bind="value:LastName" class="form-control" />
                             </div>
                             <div class="form-group">
-                                <label>Title</label>
+                                @Html.RequiredLabelFor(model => model.Title, new { @class = "control-label" })
                                 <input type="text" data-bind="value:Title" class="form-control" />
                             </div>
                             <div class="form-group">
@@ -60,7 +62,7 @@
                         </div>
                         <div class="col-md-6 ">
                             <div class="form-group">
-                                <label>Email</label>
+                                @Html.RequiredLabelFor(model => model.Email, new { @class = "control-label" })
                                 <input type="text" data-bind="value:Email" class="form-control" />
                             </div>
                             <div class=" form-group">
@@ -68,7 +70,7 @@
                                 <input type="text" data-bind="value:SecondaryEmail" class="form-control" />
                             </div>
                             <div class="form-group">
-                                <label>Phone</label>
+                                @Html.RequiredLabelFor(model => model.Phone, new { @class = "control-label" })
                                 <input type="text" data-bind="value:Phone,numericOnly:true" class=" form-control" />
                             </div>
                             <div class=" form-group">
@@ -108,6 +110,9 @@
         </div>
     </div>
     @*<button type="button" class="btn btn-primary" data-bind="click:$root.saveContact">Save</button>*@
+    <div class="pull-right">
+        <span class="required">*</span><i>Indicates required field</i>
+    </div>
     <button class="btn btn-primary ladda-button" data-style="expand-left" data-bind="ladda:$root.busy,click:$root.updateContact"><span class=" ladda-label"><i class="fa fa-file-text"></i> Update</span></button>
 </div>
 @section scripts{
