--- a/Source/CRMLite.UI/Areas/CRM/Views/Lead/Edit.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/Lead/Edit.cshtml
@@ -1,4 +1,6 @@
-﻿<div class="" data-bind="loading:$root.isBusy">
+﻿@model  PropznetCommon.Features.CRM.ViewModel.Lead.LeadViewModel
+@using CRMLite.UI.Helpers;
+<div class="" data-bind="loading:$root.isBusy">
 
     <div class="col-md-12 m-top20">
         <h3 class="inline-b">Update Lead Details</h3>
@@ -16,7 +18,7 @@
                 
                     <div class="col-md-6">
                         <div class="form-group ">
-                            <label>First Name</label>
+                            @Html.RequiredLabelFor(model => model.FirstName, new { @class = "control-label" })
                             <input type="text" data-bind="value:FirstName" class="form-control" />
                         </div>
                         <div class="form-group">
@@ -38,7 +40,7 @@
                             <select data-bind="options: $root.Leadstatus ,optionsText: 'Name',optionsValue: 'Id', value:SelectedLeadStatus" class="form-control"></select>
                         </div>
                         <div class="form-group">
-                            <label>Lead Source</label>
+                            @Html.RequiredLabelFor(model => model.LeadSource, new { @class = "control-label" })
                             <select data-bind="options: $root.Leadsource ,optionsText: 'Name',optionsValue: 'Id', value:SelectedLeadSource, optionsCaption:'Select LeadSource'" class="form-control"></select>
                         </div>
                         <div class="form-group">
@@ -99,6 +101,9 @@
        
     </div>
     <div class="col-lg-12">
+        <div class="pull-right">
+            <span class="required">*</span><i>Indicates required field</i>
+        </div>
         <button class="btn btn-primary ladda-button" data-style="expand-left" data-bind="ladda:$root.busy,click:$root.updateLead"><span class=" ladda-label"><i class="fa fa-file-text"></i> Update</span></button>
     </div>
 </div>
