--- a/Source/CRMLite.UI/Areas/CRM/Views/Potential/Edit.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/Potential/Edit.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@model  PropznetCommon.Features.CRM.ViewModel.Potential.PotentialViewModel
+@using CRMLite.UI.Helpers;
 ﻿@{
     ViewBag.Title = "Edit";
 }
@@ -24,21 +25,21 @@
                                 <div class="padTB-sm">
                                 <div class="col-lg-6">
                                     <div class="form-group">
-                                            <label>Potential Name *</label>
+                                        @Html.RequiredLabelFor(model => model.Name, new { @class = "control-label" })
                                         <input type="text" class="form-control" data-bind="value:PotentialName" />
                                     </div>
                                     <div class="form-group">
-                                            <label>Related To Account *</label>
+                                        @Html.RequiredLabelFor(model => model.AccountName, new { @class = "control-label" })
                                             <div class="col-md-11 row">
                                                 <select data-bind="options: $root.Account ,optionsText: 'Name', optionsValue: 'Id', value:AccountId, optionsCaption:'Select Account',select2: { width: '100%' }" class="select2-drop-mask atagcolor form-control"></select>
                                             </div><button class="btn btn-primary m-l-lg" data-toggle="modal" data-target="#createAccount"><i class="fa fa-plus"></i></button>
                                     </div>
                                     <div class="form-group">
-                                        <label>Contact</label>
+                                        @Html.RequiredLabelFor(model => model.ContactNo, new { @class = "control-label" })
                                         <select data-bind="options: $root.Contacts ,optionsText: 'Name', optionsValue: 'Id', value:SelectedContact, optionsCaption:'Select Contact'" class="form-control"></select>
                                     </div>
                                     <div class="form-group">
-                                        <label>Lead Source</label>
+                                        @Html.RequiredLabelFor(model => model.LeadSourceName, new { @class = "control-label" })
                                         <select data-bind="options: $root.Leadsource ,optionsText: 'Name', optionsValue: 'Id', value:SelectedLeadSource, optionsCaption:'Select Lead Source'" class="form-control"></select>
                                     </div>
                                     <div class="form-group">
@@ -52,16 +53,16 @@
                                 </div>
                                 <div class="col-lg-6">
                                     <div class="form-group">
-                                        <label>Expected Amount</label>
+                                        @Html.RequiredLabelFor(model => model.ExpectedAmount, new { @class = "control-label" })
                                         <input type="text" class="form-control" data-bind="value:PotentialAmount,numericOnly:true" />
                                     </div>
                             
                                     <div class="form-group">
-                                            <label>Sales Stage *</label>
+                                        @Html.RequiredLabelFor(model => model.SalesStageName, new { @class = "control-label" })
                                         <select data-bind="options: $root.Salesstage ,optionsText: 'Name', optionsValue: 'Id', value:SelectedSalesStage, optionsCaption:'Select Sales Stage'" class="form-control"></select>
                                     </div>
                                     <div class="form-group">
-                                            <label>Assigned To *</label>
+                                        @Html.RequiredLabelFor(model => model.AssignedTo, new { @class = "control-label" })
                                         <select data-bind="options: $root.User ,optionsText: 'Name', optionsValue: 'Id', value:selectedAssignedTo, optionsCaption:'Select User'" class="form-control"></select>
                                     </div>
                                     <div class="form-group">
@@ -93,6 +94,9 @@
 
                 <div>
                         <div class="m-t-lg">
+                            <div class="pull-right">
+                                <span class="required">*</span><i>Indicates required field</i>
+                            </div>
                         <button class="btn btn-primary ladda-button" data-style="expand-left" data-bind="ladda:$root.busy,click:$root.updatePotential"><span class=" ladda-label"><i class="fa fa-file-text"></i> Update</span></button>
                          
                     </div>
