--- a/Source/CRMLite.UI/Areas/CRM/Views/User/Update.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/User/Update.cshtml
@@ -1,3 +1,5 @@
+@model  PropznetCommon.Features.CRM.ViewModel.User.UserProfileViewModel
+@using CRMLite.UI.Helpers;
 @{
     ViewBag.Title = "Update";
 }
@@ -15,11 +17,12 @@
                 <div class="col-md-6">
                     <div class="form-group">
                         <label>User Name</label>
+                       
                         @*<input type="text" data-bind="value:UserName" disabled="disabled" class="form-control" />*@
                         <label data-bind="text:UserName"></label>
                     </div>
                     <div class="form-group">
-                        <label>First Name</label>
+                        @Html.RequiredLabelFor(model => model.FirstName, new { @class = "control-label" })
                         <input type="text" data-bind="value:FirstName" class="form-control" />
                     </div>
                     <div class="form-group">
@@ -27,7 +30,7 @@
                         <input type="text" data-bind="value:LastName" class="form-control" />
                     </div>
                     <div class="form-group">
-                        <label>Email</label>
+                        @Html.RequiredLabelFor(model => model.Email, new { @class = "control-label" })
                         <input type="text" data-bind="value:Email, event:{ change: $parent.checkEmailEdit}" class="form-control" />
                     </div>
 
@@ -37,7 +40,7 @@
                     </div>
 
                     <div class="form-group">
-                        <label>Address</label>
+                        @Html.RequiredLabelFor(model => model.Address, new { @class = "control-label" })
                         <textarea data-bind="value:Address" class="form-control" rows="5"></textarea>
                     </div>
                 </div>
@@ -67,7 +70,9 @@
 
             </div>
             <div class="col-md-12 pad0 padT0">
-                @*<button type="button" class="btn btn-primary" data-bind="click:$root.saveUserProfile">Update</button>*@
+                <div class="pull-right">
+                    <span class="required">*</span><i>Indicates required field</i>
+                </div>
                 <button class="btn btn-primary ladda-button" data-style="expand-left" data-bind="ladda:$root.IsButtonBusy,click:UpdateUserProfile"><span class=" ladda-label"><span class=" ladda-label"><i class="fa fa-check"></i> Update</span></button>
             </div>
         </div>
