--- a/Source/CRMLite.UI/Views/Shared/_Layout.cshtml
+++ b/Source/CRMLite.UI/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
     @Styles.Render("~/Content/BootstrapCommonCss")
     @Styles.Render("~/Content/FontAndIconCommonCss")
     @Styles.Render("~/Content/Googleapis")
-            @Styles.Render("~/Content/CustomCommonCss")
+    @Styles.Render("~/Content/CustomCommonCss")
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
     <link href="~/Content/css/ladda-themeless.min.css" rel="stylesheet" />
     <link href="~/Content/css/dataTables.bootstrap.css" rel="stylesheet" />
@@ -88,53 +88,53 @@
                 <div class="slim-scroll" data-height="100%" data-disable-fade-out="true" data-distance="0" data-size="10px" data-railopacity="0.2">
                     <nav class="nav-primary hidden-xs">
                         <ul class="nav">
-                            <li class="active"> <a href="@Url.Action("index", "Home", new {area = "CRM"})"> <i class="fa fa-dashboard icon"> <b class="bg-success"></b> </i> <span>Dashboard</span> </a> </li>
+                            <li class="active"> <a href="@Url.Action("index", "home", new {area = "crm"})"> <i class="fa fa-dashboard icon"> <b class="bg-success"></b> </i> <span>Dashboard</span> </a> </li>
                             <li class="">
-                                <a href="@Url.Action("index", "Lead", new {area = "CRM"})"> <i class="fa fa-columns icon"> <b class="bg-info"></b> </i> <span class="pull-right"> <i class="fa fa-angle-down text"></i> <i class="fa fa-angle-up text-active"></i> </span> <span>Leads</span> </a>
+                                <a href="@Url.Action("index", "lead", new { area = "crm" })"> <i class="fa fa-columns icon"> <b class="bg-info"></b> </i> <span class="pull-right"> <i class="fa fa-angle-down text"></i> <i class="fa fa-angle-up text-active"></i> </span> <span>Leads</span> </a>
                                 <ul class="nav bg" style="display: none;">
-                                    <li> <a href="@Url.Action("index", "Lead", new {area = "CRM"})"> <i class="fa fa-angle-right"></i> <span>Manage</span> </a> </li>
-                                    <li> <a href="@Url.Action("create", "Lead", new {area = "CRM"})"> <i class="fa fa-angle-right"></i> <span>Create</span> </a> </li>
+                                    <li> <a href="@Url.Action("index", "lead", new { area = "crm" })"> <i class="fa fa-angle-right"></i> <span>Manage</span> </a> </li>
+                                    <li> <a href="@Url.Action("create", "lead", new { area = "crm" })"> <i class="fa fa-angle-right"></i> <span>Create</span> </a> </li>
                                 </ul>
                             </li>
 
                             <li class="">
-                                <a href="@Url.Action("index", "Account", new { area = "CRM" })"> <i class="fa fa-cubes icon"> <b class="bg-dark"></b> </i> <span class="pull-right"> <i class="fa fa-angle-down text"></i> <i class="fa fa-angle-up text-active"></i> </span> <span>Account</span> </a>
+                                <a href="@Url.Action("index", "account", new { area = "crm" })"> <i class="fa fa-cubes icon"> <b class="bg-dark"></b> </i> <span class="pull-right"> <i class="fa fa-angle-down text"></i> <i class="fa fa-angle-up text-active"></i> </span> <span>Account</span> </a>
                                 <ul class="nav bg" style="display: none;">
-                                    <li> <a href="@Url.Action("index", "Account", new {area = "CRM"})"> <i class="fa fa-angle-right"></i> <span>Manage</span> </a> </li>
-                                    <li> <a href="@Url.Action("create", "Account", new {area = "CRM"})"> <i class="fa fa-angle-right"></i> <span>Create</span> </a> </li>
+                                    <li> <a href="@Url.Action("index", "account", new { area = "crm" })"> <i class="fa fa-angle-right"></i> <span>Manage</span> </a> </li>
+                                    <li> <a href="@Url.Action("create", "account", new { area = "crm" })"> <i class="fa fa-angle-right"></i> <span>Create</span> </a> </li>
                                 </ul>
                             </li>
 
                             <li class="">
-                                <a href="@Url.Action("index", "Contact", new { area = "CRM" })"> <i class="fa fa-phone icon"> <b class="bg-danger"></b> </i> <span class="pull-right"> <i class="fa fa-angle-down text"></i> <i class="fa fa-angle-up text-active"></i> </span> <span>Contacts</span> </a>
+                                <a href="@Url.Action("index", "contact", new { area = "crm" })"> <i class="fa fa-phone icon"> <b class="bg-danger"></b> </i> <span class="pull-right"> <i class="fa fa-angle-down text"></i> <i class="fa fa-angle-up text-active"></i> </span> <span>Contacts</span> </a>
                                 <ul class="nav bg" style="display: none;">
-                                    <li> <a href="@Url.Action("index", "Contact", new {area = "CRM"})"> <i class="fa fa-angle-right"></i> <span>Manage</span> </a> </li>
-                                    <li> <a href="@Url.Action("create", "Contact", new {area = "CRM"})"> <i class="fa fa-angle-right"></i> <span>Create</span> </a> </li>
+                                    <li> <a href="@Url.Action("index", "contact", new { area = "crm" })"> <i class="fa fa-angle-right"></i> <span>Manage</span> </a> </li>
+                                    <li> <a href="@Url.Action("create", "contact", new { area = "crm" })"> <i class="fa fa-angle-right"></i> <span>Create</span> </a> </li>
                                 </ul>
                             </li>
 
 
                             <li class="">
-                                <a href="@Url.Action("index", "Potential", new { area = "CRM" })"> <i class="fa fa-envelope icon"> <b class="bg-warning"></b> </i> <span class="pull-right"> <i class="fa fa-angle-down text"></i> <i class="fa fa-angle-up text-active"></i> </span> <span>Potentials</span> </a>
+                                <a href="@Url.Action("index", "potential", new { area = "crm" })"> <i class="fa fa-envelope icon"> <b class="bg-warning"></b> </i> <span class="pull-right"> <i class="fa fa-angle-down text"></i> <i class="fa fa-angle-up text-active"></i> </span> <span>Potentials</span> </a>
                                 <ul class="nav bg" style="display: none;">
-                                    <li> <a href="@Url.Action("index", "Potential", new {area = "CRM"})"> <i class="fa fa-angle-right"></i> <span>Manage</span> </a> </li>
-                                    <li> <a href="@Url.Action("create", "Potential", new {area = "CRM"})"> <i class="fa fa-angle-right"></i> <span>Create</span> </a> </li>
+                                    <li> <a href="@Url.Action("index", "potential", new { area = "crm" })"> <i class="fa fa-angle-right"></i> <span>Manage</span> </a> </li>
+                                    <li> <a href="@Url.Action("create", "potential", new { area = "crm" })"> <i class="fa fa-angle-right"></i> <span>Create</span> </a> </li>
                                 </ul>
                             </li>
 
                             <li class="">
-                                <a href="@Url.Action("index", "User", new { area = "CRM" })"> <i class="fa fa-users icon"> <b class="bg-blue"></b> </i> <span class="pull-right"> <i class="fa fa-angle-down text"></i> <i class="fa fa-angle-up text-active"></i> </span> <span>Users</span> </a>
+                                <a href="@Url.Action("index", "user", new { area = "crm" })"> <i class="fa fa-users icon"> <b class="bg-blue"></b> </i> <span class="pull-right"> <i class="fa fa-angle-down text"></i> <i class="fa fa-angle-up text-active"></i> </span> <span>Users</span> </a>
                                 <ul class="nav bg" style="display: none;">
-                                    <li> <a href="@Url.Action("index", "User", new {area = "CRM"})"> <i class="fa fa-angle-right"></i> <span>Manage</span> </a> </li>
-                                    <li> <a href="@Url.Action("create", "User", new {area = "CRM"})"> <i class="fa fa-angle-right"></i> <span>Create</span> </a> </li>
+                                    <li> <a href="@Url.Action("index", "user", new { area = "crm" })"> <i class="fa fa-angle-right"></i> <span>Manage</span> </a> </li>
+                                    <li> <a href="@Url.Action("create", "user", new { area = "crm" })"> <i class="fa fa-angle-right"></i> <span>Create</span> </a> </li>
                                 </ul>
                             </li>
                             @if(RoleChecker.CheckRole(ViewBag.RoleId, RoleIds.Admin))
                             {
                             <li class="">
-                                <a href="@Url.Action("index", "LeadSource", new { area = "CRM" })"> <i class="fa fa-leaf icon"> <b class="bg-primary"></b> </i> <span class="pull-right"> <i class="fa fa-angle-down text"></i> <i class="fa fa-angle-up text-active"></i> </span> <span>Lead Source</span> </a>
+                                <a href="@Url.Action("index", "leadsource", new { area = "crm" })"> <i class="fa fa-leaf icon"> <b class="bg-primary"></b> </i> <span class="pull-right"> <i class="fa fa-angle-down text"></i> <i class="fa fa-angle-up text-active"></i> </span> <span>Lead Source</span> </a>
                                 <ul class="nav bg" style="display: none;">
-                                    <li> <a href="@Url.Action("index", "LeadSource", new { area = "CRM" })"> <i class="fa fa-angle-right"></i> <span>Manage</span> </a> </li>
+                                    <li> <a href="@Url.Action("index", "leadsource", new { area = "crm" })"> <i class="fa fa-angle-right"></i> <span>Manage</span> </a> </li>
                                    
                                 </ul>
                             </li>     
