--- a/Source/CRMLite.UI/Areas/CRM/Views/Lead/Details.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/Lead/Details.cshtml
@@ -16,8 +16,8 @@
                     <a href="#" data-bind="click:$root.convert" data-toggle="modal" data-target="#ConvertLead">
                         Convert To Potential
                     </a>
-                    <i class="fa fa-calendar"></i>
-                    <a href="#" data-bind="click:$root.ToDo">ToDo</a>
+                    @*<i class="fa fa-calendar"></i>
+                    <a href="#" data-bind="click:$root.ToDo">ToDo</a>*@
 
                 </div>
                 <hr />
@@ -104,6 +104,7 @@
 @section scripts{
 <script src="~/Content/js/emailinjector.js"></script>
 <script src="~/App/ViewModels/Lead/LeadModel.js"></script>
+<script src="~/App/ViewModels/Lead/ConvertLead.js"></script>
 <script src="~/App/ViewModels/CRM/models.js"></script>
 <script src="~/App/ViewModels/Lead/LeadViewModel.js"></script>
 <script src="~/Content/js/mailus.js"></script>
