--- a/Source/CRMLite.UI/Areas/CRM/Views/Potential/Details.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/Potential/Details.cshtml
@@ -51,12 +51,12 @@
                                 <span data-bind="text:LeadSourceName"></span>
                             </div>
                             <label class="lblwidth"><b>Description</b>&nbsp;</label>
-                            <span data-bind="text:Description"></span>
+                            <span data-bind="text:Comments"></span>
                         </div>
                             </div>
                         </div>
                 </div>
-            </div>
+         
             <div class="tab-pane fade" id="more">
                 <div class="panel-group" id="accordionAccount">
                     <div class="panel panel-default" style="border:none;">
