--- a/Source/CRMLite.UI/Areas/CRM/Views/Contact/Index.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/Contact/Index.cshtml
@@ -60,7 +60,7 @@
                             <a href="#" data-bind="click:$root.gotoContactdetails" data-toggle="modal" data-target="#Details"><i class="fa fa-lg fa-info-circle " data-toggle="tooltip" data-placement="top" title="Details" data-original-title="Details"></i></a>&nbsp;&nbsp;
                             @if (@PermissionChecker.CheckPermission(ViewBag.UserPermissions, PermissionCodes.ManageContact))
                             {
-                                <a href="#" data-bind="click:$root.ToDo"><i class="fa fa-lg fa-calendar " data-toggle="tooltip" data-placement="top" title="To Do" data-original-title="To Do"></i></a>@:&nbsp;&nbsp;
+                                @*<a href="#" data-bind="click:$root.ToDo"><i class="fa fa-lg fa-calendar " data-toggle="tooltip" data-placement="top" title="To Do" data-original-title="To Do"></i></a>@:&nbsp;&nbsp;*@
                                 <a href="#" data-bind="click:$root.getEditPage"><i class="fa fa-lg fa-pencil-square-o " data-toggle="tooltip" data-placement="top" title="Edit" data-original-title="Edit"></i></a>@:&nbsp;&nbsp;
                                 <a href="#" data-bind="click:$root.contactdelete"><i class="fa fa-lg fa-trash-o" data-toggle="tooltip" data-placement="top" title="Delete" data-original-title="Delete"></i></a>
                             }
