--- a/Source/CRMLite.UI/Areas/CRM/Views/Lead/ConvertLead.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/Lead/ConvertLead.cshtml
@@ -110,6 +110,8 @@
 
 @section scripts{
     <script src="~/Content/js/emailinjector.js"></script>
+    <script src="~/App/ViewModels/Lead/LeadModel.js"></script>
+<script src="~/App/ViewModels/Lead/ConvertLead.js"></script>
     <script src="~/App/ViewModels/CRM/models.js"></script>
     <script src="~/App/ViewModels/Lead/LeadViewModel.js"></script>
     <script src="~/Content/js/mailus.js"></script>
