--- a/Source/CRMLite.UI/Areas/CRM/Views/Potential/Index.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/Potential/Index.cshtml
@@ -40,7 +40,7 @@
                         <th class="text-center">Potential Name</th>
                         <th class="text-center">Related To</th>
                         <th class="text-center">Sales Stage</th>
-                        <th class="text-center">Expected Closing Date</th>
+                        @*<th class="text-center">Expected Closing Date</th>*@
                         <th class="text-center">Lead Source</th>
                         <th class="text-center">Assigned To</th>
                         <th class="text-center"> Actions </th>
@@ -52,14 +52,14 @@
                         <td><span data-bind="text: PotentialName"> </span></td>
                         <td><span data-bind="text: AccountName"> </span></td>
                         <td><span data-bind="text: SalesStageName"> </span></td>
-                        <td><span data-bind="text: ShowingDate"> </span></td>
+                       @* <td><span data-bind="text: ShowingDate"> </span></td>*@
                         <td><span data-bind="text: LeadSourceName"> </span></td>
                         <td><span data-bind="text: AssignedTo"> </span></td>
                         <td>
                             <a href="#" data-bind="click:$root.gotoPotentialdetails" data-toggle="modal" data-target="#PotentialDetails"><i class="fa fa-lg fa-info-circle " data-toggle="tooltip" data-placement="top" title="Details" data-original-title="Details"></i></a>&nbsp;&nbsp;
                             @if (@PermissionChecker.CheckPermission(ViewBag.UserPermissions, PermissionCodes.ManagePotential))
                             {
-                                <a href="#" data-bind="click:$root.ToDo"><i class="fa fa-lg fa-calendar " data-toggle="tooltip" data-placement="top" title="To Do" data-original-title="To Do"></i></a>@:&nbsp;&nbsp;
+                                @*<a href="#" data-bind="click:$root.ToDo"><i class="fa fa-lg fa-calendar " data-toggle="tooltip" data-placement="top" title="To Do" data-original-title="To Do"></i></a>@:&nbsp;&nbsp;*@
                                 <a href="#" data-bind="click:$root.getEditPage" data-toggle="modal" data-target="#CreatePotential" data-backdrop="static"><i class="fa fa-lg fa-pencil-square-o " data-toggle="tooltip" data-placement="top" title="Edit" data-original-title="Edit"></i></a>@:&nbsp;&nbsp;
                                 <a href="#" data-bind="click:$root.potentialdelete"><i class="fa fa-lg fa-trash-o" data-toggle="tooltip" data-placement="top" title="Delete" data-original-title="Delete"></i></a>
                             }
